# thorvg.android

./: .gitignore  AUTHORS  CLAUDE.md  CODEOWNERS  CONTRIBUTORS.md  LICENSE  README.md  build_libthorvg.sh  copy_libthorvg.sh  gradle.properties  settings.gradle
.github/: FUNDING.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lottie/: build.gradle
lottie-compose/: build.gradle.kts
lottie-view/: build.gradle.kts
lottie-view/src/main/res/values/: attrs.xml
lottie/src/main/cpp/: CMakeLists.txt  LottieData.cpp  LottieData.h  lottie-libs.cpp
lottie/src/main/java/org/thorvg/lottie/: LottieAnimationView.kt  LottieCore.kt  LottieDrawable.java  LottieDrawable.kt
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/org/thorvg/sample/: ComposeSampleScreen.kt  MainActivity.kt  SampleType.kt
sample/src/main/res/drawable/: ic_logo.xml  lottie_swinging.xml
sample/src/main/res/layout/: activity_main.xml  activity_view_sample.xml  fragment_lottie_view_sample.xml  fragment_svg_view_sample.xml
sample/src/main/res/values/: strings.xml  themes.xml
thorvg-compose/: build.gradle.kts
thorvg-compose/src/androidTest/java/org/thorvg/compose/: ExampleInstrumentedTest.java
thorvg-compose/src/test/java/org/thorvg/compose/: ExampleUnitTest.java
thorvg-core/: build.gradle
thorvg-core/src/main/cpp/: CMakeLists.txt  LottieData.cpp  LottieData.h  SvgData.cpp  SvgData.h  lottie-libs.cpp  svg-libs.cpp
thorvg-view/: build.gradle.kts
thorvg-view/src/androidTest/java/org/thorvg/view/: ExampleInstrumentedTest.java
thorvg-view/src/main/java/org/thorvg/view/: ThorVGDrawable.kt  ThorVGView.kt
thorvg-view/src/main/res/values/: attrs.xml
thorvg-view/src/test/java/org/thorvg/view/: ExampleUnitTest.java
(+49 files in other folders)
